--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
   },
   "dependencies": {
     "@pinia/nuxt": "^0.5.5",
+    "@prisma/nuxt": "^0.0.35",
     "nuxt": "^3.13.0",
     "vue": "latest",
     "vue-router": "latest"
   },
   "overrides": {
     "vue": "latest"
+  },
+  "devDependencies": {
+    "@prisma/client": "^5.21.1"
   }
 }
