--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vue": "latest"
   },
   "devDependencies": {
-    "@prisma/client": "^5.21.1"
+    "@prisma/client": "^5.21.1",
+    "prisma": "^5.21.1"
   }
 }
