--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@pinia/nuxt": "^0.5.5",
     "@prisma/nuxt": "^0.0.35",
     "nuxt": "^3.13.0",
+    "swiper": "^11.1.14",
     "vue": "latest",
     "vue-router": "latest"
   },
@@ -20,7 +21,7 @@
     "vue": "latest"
   },
   "devDependencies": {
-    "@prisma/client": "^5.21.1",
+    "@prisma/client": "^5.22.0",
     "prisma": "^5.21.1"
   }
 }
