--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/image": "^1.8.1",
     "@pinia/nuxt": "^0.5.5",
     "@prisma/nuxt": "^0.0.35",
     "nuxt": "^3.13.0",
