--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "nuxt": "^3.13.0",
     "swiper": "^11.1.14",
     "vue": "latest",
-    "vue-router": "latest"
+    "vue-router": "latest",
+    "vue-yandex-maps": "^2.1.4"
   },
   "overrides": {
     "vue": "latest"
