--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "@pinia/nuxt": "^0.5.5",
     "@prisma/nuxt": "^0.0.35",
     "nuxt": "^3.13.0",
+    "pdfvuer": "^2.0.1",
     "swiper": "^11.1.14",
     "vue": "latest",
+    "vue-pdf": "^4.3.0",
+    "vue-pdf-embed": "^2.1.1",
     "vue-router": "latest",
     "vue-yandex-maps": "^2.1.4"
   },
