--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nuxt/image": "^1.8.1",
     "@pinia/nuxt": "^0.5.5",
     "@prisma/nuxt": "^0.0.35",
+    "emailjs-com": "^3.2.0",
     "nuxt": "^3.13.0",
     "pdfvuer": "^2.0.1",
     "swiper": "^11.1.14",
