--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "deploy": "nuxt generate && gh-pages -d dist"
   },
   "dependencies": {
     "@nuxt/image": "^1.8.1",
@@ -28,6 +29,7 @@
   },
   "devDependencies": {
     "@prisma/client": "^5.22.0",
+    "gh-pages": "^6.3.0",
     "prisma": "^5.21.1"
   }
 }
