--- a/package.json
+++ b/package.json
@@ -22,13 +22,15 @@
     "vue-pdf": "^4.3.0",
     "vue-pdf-embed": "^2.1.1",
     "vue-router": "latest",
-    "vue-yandex-maps": "^2.1.4"
+    "vue-yandex-maps": "^2.1.4",
+    "xml": "^1.0.1"
   },
   "overrides": {
     "vue": "latest"
   },
   "devDependencies": {
     "@prisma/client": "^5.22.0",
+    "@types/xml": "^1.0.11",
     "gh-pages": "^6.3.0",
     "prisma": "^5.21.1"
   }
