--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "@nuxt/image": "^1.8.1",
     "@pinia/nuxt": "^0.5.5",
     "@prisma/nuxt": "^0.0.35",
+    "busboy": "^1.6.0",
+    "dotenv": "^16.5.0",
     "emailjs-com": "^3.2.0",
+    "nodemailer": "^7.0.3",
     "nuxt": "^3.13.0",
     "nuxt-swiper": "^2.0.1",
     "pdfvuer": "^2.0.1",
@@ -31,6 +34,8 @@
   },
   "devDependencies": {
     "@prisma/client": "^5.22.0",
+    "@types/busboy": "^1.5.4",
+    "@types/nodemailer": "^6.4.17",
     "@types/xml": "^1.0.11",
     "gh-pages": "^6.3.0",
     "prisma": "^5.21.1"
