--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nuxt/image": "^1.8.1",
     "@pinia/nuxt": "^0.5.5",
     "@prisma/nuxt": "^0.0.35",
+    "bcrypt": "^6.0.0",
     "busboy": "^1.6.0",
     "dotenv": "^16.5.0",
     "emailjs-com": "^3.2.0",
