--- a/package.json
+++ b/package.json
@@ -18,14 +18,12 @@
     "busboy": "^1.6.0",
     "dotenv": "^16.5.0",
     "emailjs-com": "^3.2.0",
+    "md5": "^2.3.0",
     "nodemailer": "^7.0.3",
     "nuxt": "^3.13.0",
     "nuxt-swiper": "^2.0.1",
-    "pdfvuer": "^2.0.1",
     "swiper": "^11.1.14",
     "vue": "latest",
-    "vue-pdf": "^4.3.0",
-    "vue-pdf-embed": "^2.1.1",
     "vue-router": "latest",
     "vue-yandex-maps": "^2.1.4",
     "xml": "^1.0.1"
@@ -35,7 +33,9 @@
   },
   "devDependencies": {
     "@prisma/client": "^5.22.0",
+    "@types/bcrypt": "^6.0.0",
     "@types/busboy": "^1.5.4",
+    "@types/md5": "^2.3.5",
     "@types/nodemailer": "^6.4.17",
     "@types/xml": "^1.0.11",
     "gh-pages": "^6.3.0",
