--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "@nuxt/image": "^1.8.1",
     "@pinia/nuxt": "^0.5.5",
     "@prisma/nuxt": "^0.0.35",
+    "@tiptap/extension-table": "^3.6.1",
+    "@tiptap/pm": "^3.6.1",
+    "@tiptap/starter-kit": "^3.6.1",
+    "@tiptap/vue-3": "^3.6.1",
     "bcrypt": "^6.0.0",
     "busboy": "^1.6.0",
     "dotenv": "^16.5.0",
