--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@types/md5": "^2.3.5",
     "@types/nodemailer": "^6.4.17",
     "@types/xml": "^1.0.11",
+    "baseline-browser-mapping": "^2.9.19",
     "gh-pages": "^6.3.0",
     "prisma": "^5.21.1"
   }
